--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header>
         <h1 class="title">Pokedex</h1>
         <div class="header-search">
-            <input id="search" type="text">
-            <button onclick="searchPokemon()"><img src="./img/search.png" alt=""></button>
+            <input id="search" type="text" onkeyup="searchPokemon()">
+            <button ><img src="./img/search.png" alt=""></button>
         </div>
     </header>
 
