style changes - font, input

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fonts.css">
     <script src="script.js"></script>
 
     <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
@@ -25,10 +26,8 @@
             <img class="pokeball" src="./img/pokeball-red.png" alt="Pokeball">
             <h1 class="title">Pokedex</h1>
         </div>
-        <div class="header-search">
-            <input id="search" type="text" placeholder="Pokemon" onkeyup="searchPokemon()">
-            <button><img src="./img/search.png" alt=""></button>
-        </div>
+        <input id="search" type="text" placeholder="search Pokemon" onkeyup="searchPokemon()">
+
     </header>
 
     <div class="content" id="content">
